Fixed about intro section on mobile and created mobile-functioning navbar (did not update on Projects pages)

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -457,6 +457,18 @@ hr {
     width: 100%;
 }
 
+.about-intro.gallery-column{
+    flex: 40%;
+    max-width: 40%;
+    padding: 30px;
+}
+
+.about-intro-text.gallery-column{
+    flex: 60%;
+    max-width: 60%;
+}
+
+
 .regular .gallery-column img:hover {
     color: #FFF5EB;
     opacity: 80%;
@@ -510,17 +522,30 @@ hr {
     margin: 0 auto;
 }
 
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
     .gallery-column {
         flex: 50%;
         max-width: 50%;
     }
+
+    .about-intro.gallery-column, .about-intro-text.gallery-column {
+        flex: 100%;
+        max-width: 100%;
+    }
+
+    .about-intro.gallery-column {
+        margin: 0px 80px;
+    }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
 
+    .regular{
+        margin: 5px 25px;
+    }
     .regular h1, h2, h3, h4, h5, h6 {
         text-indent: 0px !important;
     }
@@ -528,6 +553,10 @@ hr {
     .gallery-column {
         flex: 100%;
         max-width: 100%;
+    }
+
+    .about-intro.gallery-column {
+        margin: 0px;
     }
 
     .column {
